Finalized Messaging between customer and application-process

--- a/application-process/src/main/resources/templates/status.html
+++ b/application-process/src/main/resources/templates/status.html
@@ -33,7 +33,8 @@
         <tr>
             <th>Application Number</th>
             <th>Number Generated</th>
-            <th>Credit Application sent</th>
+            <th>Credit Application Sent</th>
+            <th>Customer Created</th>
 
         </tr>
         </thead>
@@ -43,6 +44,7 @@
             <td th:text="${status.applicationNumber}"/>
             <td th:text="${status.applicationStart}"/>
             <td th:text="${status.creditApplicationEntered}"/>
+            <td th:text="${status.customerEntered}"/>
 
         </tr>
 
