--- a/application-process/src/main/resources/templates/index.html
+++ b/application-process/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
         <h2>Get your big fat pug loan here</h2>
 
 
-        <button type="submit" class="btn btn-default">Yes, I want to apply -></button>
+        <button type="submit" class="btn btn-primary btn-lg">Yes, I want to apply -></button>
     </form>
 
 </div>
