--- a/application-process/src/main/resources/templates/status.html
+++ b/application-process/src/main/resources/templates/status.html
@@ -35,6 +35,8 @@
             <th>Number Generated</th>
             <th>Credit Application Sent</th>
             <th>Customer Created</th>
+            <th>Scoring Date</th>
+            <th>Scoring Result</th>
 
         </tr>
         </thead>
@@ -45,6 +47,8 @@
             <td th:text="${status.applicationStart}"/>
             <td th:text="${status.creditApplicationEntered}"/>
             <td th:text="${status.customerEntered}"/>
+            <td th:text="${status.scoringDoneDate}"/>
+            <td th:text="${status.scoringResult}"/>
 
         </tr>
 
