--- a/application-process/src/main/resources/templates/status.html
+++ b/application-process/src/main/resources/templates/status.html
@@ -37,6 +37,7 @@
             <th>Customer Created</th>
             <th>Scoring Date</th>
             <th>Scoring Result</th>
+            <th>Approved</th>
 
         </tr>
         </thead>
@@ -49,6 +50,7 @@
             <td th:text="${status.customerEntered}"/>
             <td th:text="${status.scoringDoneDate}"/>
             <td th:text="${status.scoringResult}"/>
+            <td th:text="${status.approved}"/>
 
         </tr>
 
