--- a/application-process/src/main/resources/templates/confirm.html
+++ b/application-process/src/main/resources/templates/confirm.html
@@ -29,6 +29,42 @@
 <div class="container">
 
     <h1>Thank you, we will get back to you</h1>
+
+    <h3>The status of your current application is:</h3>
+
+
+    <table class="table table-striped">
+        <tr>
+            <td>Application Number</td>
+            <td th:text="${status.applicationNumber}"/>
+        </tr>
+        <tr>
+            <td>Start of Application</td>
+            <td th:text="${status.applicationStart}"/>
+        </tr>
+        <tr>
+            <td>Credit Application Entered</td>
+            <td th:text="${status.creditApplicationEntered}"/>
+        </tr>
+        <tr>
+            <td>Customer Entered</td>
+            <td th:text="${status.customerEntered}"/>
+        </tr>
+        <tr>
+            <td>Scoring Performed</td>
+            <td th:text="${status.scoringDoneDate}"/>
+        </tr>
+        <tr>
+            <td>Scoring Result</td>
+            <td th:text="${status.scoringResult}"/>
+        </tr>
+        <tr>
+            <td>Credit Application Approved</td>
+            <td th:text="${status.approved}"/>
+        </tr>
+    </table>
+
+    <a class="btn btn-lg" href="/">Start again</a>
 </div>
 </body>
 </html>
